--- a/guia01/primerVersion.html
+++ b/guia01/primerVersion.html
@@ -12,5 +12,8 @@
     <p>
         Los Sistemas de Control de Versiones Distribuidos (DVCS) salvan este problema. Algunos ejemplos de sistemas distribuidos, aparte de Git, son Mercurial, Bazaar o Darcs. En este tipo de herramientas, los clientes replican completamente el repositorio.
     </p>
+    <p>
+        Esto es para generar conficto
+    </p>
 </body>
 </html>
